      various Python debhelper scripts.  (Closes: #575590, #582763)
    + [RA] Add runhaskell and runghc.  (Closes: #589266)

  * debian/changelog:
    + [RA] Fix Policy 3.9.0 reference in 2.4.2.  (Closes: #587549)

  * lib/Lintian/Check.pm:
    + [RA] More correctly handle hyphenated words to avoid triggering
      spelling error false positives.  (Closes: #588896)
  * lib/Lintian/Schedule.pm:
    + [ADB] Import "warning" from Lintian::Output, really fixing the
      error caused by a non-existent file referenced in a .changes
      file.  (Closes: #583555, again)

  * private/refresh-insserv-data:
    + [RG] Hardcode the '$all' virtual facility.

  * reporting/html_reports:
    + [RA] Stop attempting to report unknown tags with a fake
      description.  This was failing with an error later, and the tag was
      probably removed from Lintian and is now erroneous.

  * t/runtests:
    + [RA] Add support for skipping raw Debian package and source package
      tests.

 -- Raphael Geissert <geissert@debian.org>  Fri, 02 Jul 2010 15:22:17 -0500

lintian (2.4.2) unstable; urgency=low

  The "Policy 3.9.0" release.

  * Summary of tag changes:
    + Added:
      - arch-wildcard-in-binary-package
      - bad-provided-package-name
      - conflicts-with-version
      - copyright-refers-to-deprecated-bsd-license-file
      - init.d-script-depends-on-unknown-virtual-facility
      - team-upload-has-incorrect-version-number
      - xc-package-type-in-debian-control (pedantic)
    + Removed:
      - arch-any-in-binary-pkg (now in arch-wildcard-in-binary-package)
      - package-type-in-debian-control

  * checks/changes-file.desc:
    + [RA] Add references for file-size-mismatch-in-changes-file and
      checksum-mismatch-in-changes-file.
  * checks/control-file{,.desc}:
    + [RA] Remove package-type-in-debian-control now that dpkg-dev handles
      it as desired by the d-i team.  xc-package-type-in-debian-control